--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -79,10 +79,10 @@
   margin-bottom: 0;
   list-style: none;
 
-  .nav-link {
-    padding-right: 0;
-    padding-left: 0;
-  }
+  // .nav-link {
+  //   padding-right: 0;
+  //   padding-left: 0;
+  // }
 
   .dropdown-menu {
     position: static;
