--- a/sass/_offcanvas.scss
+++ b/sass/_offcanvas.scss
@@ -1,7 +1,7 @@
 .offcanvas {
   position: fixed;
   bottom: 0;
-  z-index: $zindex-offcanvas;
+  z-index: 9999;
   display: flex;
   flex-direction: column;
   max-width: 100%;
