--- a/sass/erin/_layout.scss
+++ b/sass/erin/_layout.scss
@@ -631,7 +631,8 @@ header {
         background-color: transparent !important;
 
         .articleTitle {
-            margin-bottom: 1rem;
+            padding-top: 2%;
+            margin-bottom: 0;
 
             h5 {
                 text-align: center;
@@ -642,7 +643,7 @@ header {
             h1 {
                 color: $blue-bg;
                 text-align: center;
-                margin-bottom: 3rem;
+                // margin-bottom: 3rem;
                 font-size: 2rem;
             }
 
@@ -651,7 +652,7 @@ header {
             }
 
             @include media-breakpoint-down(lg) {
-                margin-bottom: 0;
+                padding-top: 1.8%;
 
                 h1 {
                     font-size: 1.5rem !important;
@@ -822,7 +823,6 @@ header {
             padding: .5rem 1.1rem;
             color: $primary;
             cursor: pointer;
-            border-bottom: 1px solid $cyan;
         }
 
         // filter: brightness(1.2);
@@ -833,6 +833,7 @@ header {
     }
 
     @include media-breakpoint-down(md) {
+        
         .navTitle {
             display: block;
 
@@ -849,9 +850,9 @@ header {
             list-style: none;
             overflow: hidden;
 
-            a {
+            &>a {
                 position: relative;
-                padding: .5em 1em;
+                padding: .4em 1em;
                 position: relative;
                 display: block;
                 color: $gray-800;
@@ -861,7 +862,7 @@ header {
 
                 span {
                     position: relative;
-                    padding: .1em .35em;
+                    padding: .1em .3em;
                     background-color: $white;
                     z-index: 2;
 
@@ -899,11 +900,11 @@ header {
             //子選單內層的選單
             &>ul {
                 margin-left: 0;
-                margin-top: .5em;
+                margin-top: .4em;
                 padding-left: 1em;
 
                 li {
-                    padding: .3em 0;
+                    padding: .4em 0;
                     list-style: none;
                     font-size: .9rem;
                     color: $gray-600;
@@ -911,6 +912,9 @@ header {
 
                     &:hover {
                         filter: brightness(1.2);
+                    }
+                    &>a{
+                        color: $gray-700;
                     }
 
                     span.active {
@@ -924,6 +928,7 @@ header {
 
         @include media-breakpoint-down(md) {
             display: none;
+            border-top: 1px solid $cyan;
         }
     }
 }
@@ -933,7 +938,9 @@ header {
     background-color: $gray-100;
     border: 0;
     .card-body{
-        padding: 1.7em;
+        // align-items: center;
+        padding: 1.5em;
+        
     }
     h5 {
         font-size: 1.15rem;
@@ -988,8 +995,11 @@ header {
     }
 
     &.card_hh {
+        display: flex;
         flex-direction: row;
-        align-items: stretch;
+        justify-content: flex-start;
+        // align-items: stretch;
+        flex-grow: 1;
         margin-bottom: 1rem;
         padding-left: 0;
         // overflow: hidden;
@@ -1007,15 +1017,22 @@ header {
         }
 
         .card-body {
-            width: 55%;
-        }
-
-        @include media-breakpoint-down(xl) {
-            .card_img,
-            .card-body {
-                width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            width: 63%;
+            padding: .8em 1.5em;
+            .btn{
+                width: 8em;
             }
         }
+
+        // @include media-breakpoint-down(lg) {
+        //     .card_img{
+        //         width: 100%;
+        //         height: 100%;
+        //     }
+        // }
 
         @include media-breakpoint-down(md) {
             flex-direction: column;
@@ -1026,14 +1043,25 @@ header {
                 display: flex;
                 align-items: center;
                 width: 100%;
-                height: 8rem;
-                overflow: hidden;
+                height: 30vw;
+                // overflow: hidden;
 
                 img {
                     width: 100%;
                 }
             }
+            .card-body{
+                width: 100%;
+                .btn{
+                    margin-left: calc(50% - 4em);
+                }
+            }
 
+        }
+        @include media-breakpoint-down(sm){
+            .card_img{
+                height: 40vw;
+            }
         }
     }
 
@@ -1055,9 +1083,9 @@ header {
             }
         }
 
-        .btn {
-
-            margin-left: 39%;
+        .btn{
+            width: 8em;
+            margin-left: calc(50% - 4em);
         }
     }
 
