--- a/sass/erin/_layout.scss
+++ b/sass/erin/_layout.scss
@@ -14,13 +14,20 @@ body {
         background-image: url(../img/topBG.svg);
         background-repeat: no-repeat;
         background-position-x: center;
+        background-position-y: 0;
         background-size: 100% auto;
         background-attachment: fixed;
-
+        @media (min-width: 1669px){
+            background-position-y: 0;
+        }
+        @media (min-width: 1889px){
+            background-position-y: -5%;
+        }
         @include media-breakpoint-down(xl) {
             // background: transparent;  
             // ba
-            background-size: 150% auto;
+            background-position-y: 5%;
+            background-size: 130% auto;
         }
 
         @include media-breakpoint-down(md) {
@@ -126,13 +133,15 @@ header {
         padding: 10px;
 
         .logo {
-            width: auto;
+            width: 50%;
             height: 100%;
+            display: flex;
+            flex-wrap: nowrap;
             // padding-top: 5px;
             // padding-left: 10px;
 
             .navbar-brand {
-                width: 100%;
+                width: auto;
                 // margin-top: 5px;
 
                 img {
@@ -141,7 +150,11 @@ header {
                 }
             }
         }
-
+        .mainNav{
+            display: flex;
+            justify-content: flex-end;
+            width: 100%;
+        }
         .navBar_list {
             position: relative;
             display: flex;
@@ -233,7 +246,7 @@ header {
 
         }
         //NAV M-------
-        @include media-breakpoint-down(md) {
+        @include media-breakpoint-down(lg) {
             padding: 5px;
             // .navBar_list{
             //     display: none;
@@ -266,15 +279,20 @@ header {
 
             .logo {
                 display: flex;
-                width: 70%;
+                width: 100%;
+                margin-left: 2%;
 
                 .navbar-brand {
-                    width: 100%;
+                    width: auto;
 
                     img {
                         max-width: 100%;
                     }
                 }
+            }
+            .mainNav{
+                display: block;
+                width: auto;
             }
         }
     }
@@ -558,20 +576,23 @@ header {
 
         h4 {
             color: $primary;
-            padding: 1rem 2rem;
+            padding: 1rem 1.5rem;
         }
 
         .otherList {
             padding: .5rem;
             padding-left: 1.5rem;
+            padding-right: 1.5rem;
             margin-bottom: 0;
 
             a {
                 text-decoration: none;
                 color: $gray-800;
+                margin-bottom: 1rem;
 
                 &:hover {
                     color: $primary;
+                    filter: brightness(1.1);
                 }
 
                 h5 {
@@ -594,8 +615,70 @@ header {
                 color: $gray-700;
                 @include text-ellipsis (100%, 2);
             }
+            &.list_hh{
+                figure{
+                    display: flex;
+                    margin-bottom: .5rem;
+                    .pic{
+                        width: 15%;
+                        height: 73px;
+                        img{
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                        }
+                    }
+                    .text{
+                        width: 85%;
+                    }
+                    h5,p{
+                        padding-left: 1rem;
+                        padding-right: 1rem;
+                    }
+                    
+                    @include media-breakpoint-down(xl){
+                        .pic{
+                            width: 20%;
+                        }
+                        .text{
+                            width: 80%;
+                        }
+                    }
+                    @include media-breakpoint-down(lg){
+                        .pic{
+                            width: 30%;
+                        }
+                        .text{
+                            width: 70%;
+                        }
+                    }
+                    @include media-breakpoint-down(md){
+                        .pic{
+                            width: 35%;
+                            height: 73px;
+                        }
+                        .text{
+                            width: 65%;
+                        }
+                    }
+                }
+                
+                
+            }
 
 
+        }
+        @include media-breakpoint-down(md) {
+            padding: 10px;
+            h4{
+                padding: .3rem 1rem;
+            }
+            &>div{
+                padding: .8rem 0;
+            }
+            .otherList{
+                padding-left: 1rem;
+            }
         }
     }
 
@@ -631,8 +714,8 @@ header {
         background-color: transparent !important;
 
         .articleTitle {
-            padding-top: 2%;
-            margin-bottom: 0;
+            padding-top: 3%;
+            margin-bottom: 5%;
 
             h5 {
                 text-align: center;
@@ -650,7 +733,19 @@ header {
             img {
                 width: 100%;
             }
+            @include media-breakpoint-up(xl){
+                padding-top:0;
+                margin-bottom: 0;
 
+            }
+            @media (min-width: 1453px){
+                padding-top: 1%;
+                margin-bottom:1%;
+            }
+            @media (min-width: 1669px){
+                padding-top: 5%;
+                margin-bottom: 3%;
+            }
             @include media-breakpoint-down(lg) {
                 padding-top: 1.8%;
 
@@ -1080,6 +1175,8 @@ header {
 
             img {
                 width: 100%;
+                height: 100%;
+                object-fit: cover;
             }
         }
 
@@ -1177,7 +1274,6 @@ header {
     }
 
     &>div {
-
         padding: .7rem;
         flex-grow: 1;
         box-sizing: border-box;
@@ -1186,12 +1282,27 @@ header {
 
     &>div:last-child {
         display: flex;
+        justify-content: center;
         align-items: center;
-        // align-self: center;
+        width: auto;
         min-height: 100%;
-        padding: .5rem;
         background-color: $cyan;
+        text-decoration: none;
+        padding: 0;
+        &>a {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            padding: .5rem;
+            text-decoration: none;
+        }
+        &:hover{
+            background-color: $primary;
+        }
     }
+    
 
     i {
         // display: block;
@@ -1327,7 +1438,7 @@ footer{
             li{
                 // font-size: 1rem;
                 color: $gray-800;
-                line-height: 1.5;
+                line-height: 1.8;
                 span{
                     margin-right: .5em;
                 }
@@ -1337,7 +1448,7 @@ footer{
                 }
                 &.logo1{
                     img{
-                        height: 3.2em;
+                        height: 2.3em;
                     }
                 }
                 &.logo3{
