首頁加影片

--- a/sass/erin/_index.scss
+++ b/sass/erin/_index.scss
@@ -58,6 +58,14 @@ body.indexbg {
         margin-top: 60px;
     }
 }
+.indexVideo{
+    margin: 0;
+    padding: 0;
+    height: fit-content;
+    video{
+        margin-bottom: -7px;
+    }
+}
 
 .bg_intro {
     position: relative;
