增加yt頁面&footer加icon

--- a/layout/footer.html
+++ b/layout/footer.html
@@ -1,7 +1,5 @@
 
 <div class="footerAll">
-
-
     <div class="footerInfo">
         <ul>
             <li class="footerLogo logo1"><img src="./assets/img/logo-color.f50f778.svg" alt=""></li>
@@ -11,6 +9,20 @@
             <li>Email：member@taiwantrade.com.tw</li>
             <li class="footerLogo logo2 mt-3"><span>主辦</span><i><img src="./assets/img/logo_ita.svg" alt=""></i></li>
             <li class="footerLogo logo3"><span>執行</span><i><img src="./assets/img/logo_taitra.svg" alt=""><i><img src="./assets/img/logo-color.f50f778.svg" alt=""></i></li>
+
+            <li class="footerIcons">
+                <img src="./assets/img/icon_qrcode.svg" alt="taiwantrade">
+                <a href="https://www.facebook.com/taiwantrade" target="_blank"><img src="./assets/img/icon_fb.svg" alt="facebook"></a>
+                <a href="https://page.line.me/hle1397e?openQrModal=true" target="_blank"><img src="./assets/img/icon_line.svg" alt="line"></a>
+                <a href="https://www.instagram.com/taiwantrade/" target="_blank"><img src="./assets/img/icon_ig.svg" alt="instagram"></a>
+                <a href="https://www.youtube.com/taiwantrade" target="_blank"><img src="./assets/img/icon_yt.svg" alt="youtube"></a>
+            </li>
+            
+        </ul>
+    </div>
+    <div>
+        <ul>
+            
         </ul>
     </div>
     <div class="footerLinks">
