--- a/layout/header.html
+++ b/layout/header.html
@@ -78,7 +78,7 @@
             <ul class="down_menu">
               <li><a class="dropdown-item" href="https://info.taiwantrade.com/video/#menu =11610"
                   target="_blank">影音最前線</a></li>
-              <li><a class="dropdown-item" href="https://www.youtube.com/taiwantrade" target="_blank">Youtube</a>
+              <li><a class="dropdown-item" href="youtube.html" target="_blank">Youtube</a>
               </li>
             </ul>
           </li>
