--- a/sass/erin/_index.scss
+++ b/sass/erin/_index.scss
@@ -92,7 +92,7 @@ body.indexbg {
     h5,
     p {
         color: var(--bg_intro_text);
-        margin-bottom: .5em;
+        margin-bottom: 1rem;
     }
 
     p {
@@ -170,6 +170,11 @@ body.indexbg {
         padding-left: 0;
         padding-right: 0;
         margin-bottom: 1.8em;
+        border: 0;
+        h5{
+            @include text-ellipsis (100%, 2);
+
+        }
 
         p {
 
@@ -204,8 +209,9 @@ body.indexbg {
     }
 
     .btn {
-        margin-top: 3em;
+        margin-top: 1.5em;
         padding: .5em 2em;
+        margin-bottom: 1em;
 
         &:hover {
             color: $primary;
@@ -308,6 +314,9 @@ h2{
             color: $gray-800;
             &:hover{
                 color: $primary;
+            }
+            &.btn:hover{
+                color: $white;
             }
         }
 
@@ -478,7 +487,7 @@ display: none;
         // padding-left: 0;
         // padding-right: 0;
         .card-body {
-            padding: .5em 1em;
+            padding: .5em .8em;
 
             p {
                 font-weight: 500;
@@ -508,10 +517,13 @@ display: none;
 
         .card_img {
             display: flex;
+            justify-content: center;
             align-items: center;
             width: 100%;
             height: auto;
             overflow: hidden;
+            padding: 8px;
+            padding-bottom: 0;
 
             img {
                 width: 100%;
