--- a/sass/erin/_index.scss
+++ b/sass/erin/_index.scss
@@ -442,7 +442,7 @@ display: none;
                     height: 9vw;
                 }
                 .card-body{
-                    height: 30%;
+                    min-height: 3.5em;
                 }
                 
             }
